syntax = "proto3";
package zetachain.zetacore.crosschain;

import "zetachain/zetacore/pkg/coin/coin.proto";

option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";

message InboundTracker {
  int64 chain_id = 1;
  string tx_hash = 2;
  pkg.coin.CoinType coin_type = 3;
}
